force-app/main/default/objects/Requirement_Field_Value__c/Requirement_Field_Value__c.object-meta.xml
<CustomObject>
    <label>Requirement Field Value</label>
    <nameField>
        <label>Requirement Field Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirement Field Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>