force-app/main/default/objects/Requirement_Field_Value__c/fields/Correction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Correction_Reason__c</fullName>
    <label>Correction Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>