force-app/main/default/objects/Requirement_Field_Value__c/fields/Correction_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Correction_Requested_Date__c</fullName>
    <label>Correction Requested Date</label>
    <type>DateTime</type>
</CustomField>