force-app/main/default/objects/Requirement_Field_Value__c/fields/Requirement_Field__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Field__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requirement Field</label>
    <referenceTo>Requirement_Field__c</referenceTo>
    <relationshipLabel>Requirement Field Values</relationshipLabel>
    <relationshipName>Requirement_Field_Values</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>