force-app/main/default/objects/Requirement_Field_Value__c/fields/Validation_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Validation_Error_Message__c</fullName>
    <label>Validation Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>