force-app/main/default/objects/Requirement_Field_Value__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <label>Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Needs_Correction</fullName>
                <label>Needs Correction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>